--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             <div class="vimaction">Zeigt alle Vorkommen von 'word' in der Hilfe</div>
         </div>
         <div class="helpbox">
+            <div class="usraction">:xxxx CRTL-d<br /></div>
+            <div class="vimaction">Zeigt alle möglichen Optionen zu dem Befehl :xxxx.</div>
+        </div>
+        <div class="helpbox">
             <div class="usraction">
                 :help irgendwas<br />
                 Normal mode
@@ -79,6 +83,68 @@
             <div class="vimaction">Hilfe zu VIM-Option</div>
             <div class="example">:help 'textwidth'</div>
         </div>
+        <h2>Bewegen</h2>
+        <div class="abstract">
+            <p>Bewegungen werden im normal modus durchgeführt. In den
+            normal Modus gelangt man durch drücken von &lt;Esc&gt;. Um ganz
+            sicher in den normal Modus zu gelangen drückt man einfach 2x
+            &lt;Esc&gt;</p>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">h</div>
+            <div class="vimaction">nach links</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">j</div>
+            <div class="vimaction">nach unten</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">k</div>
+            <div class="vimaction">nach oben</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">l</div>
+            <div class="vimaction">nach rechts</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">f&lt;</div>
+            <div class="vimaction">vorwärts bis Zeichen &lt;</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">t&lt;</div>
+            <div class="vimaction">vorwärts bis vor Zeichen &lt;</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">F&lt;</div>
+            <div class="vimaction">rückwärts bis Zeichen &lt;</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">T&lt;</div>
+            <div class="vimaction">rückwärts bis Zeichen &lt;</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">zt</div>
+            <div class="vimaction">Positionerung der aktuellen Zeile an
+            den oberen Bildschirmrand</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">zz</div>
+            <div class="vimaction">Positionierung der aktuellen Zeile in
+            die Mitte</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">zb</div>
+            <div class="vimaction">Positionierung der aktellen Zeile
+                nach unten.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction"></div>
+            <div class="vimaction"></div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction"></div>
+            <div class="vimaction"></div>
+        </div>
         <div class="helpbox">
             <div class="usraction"></div>
             <div class="vimaction"></div>
@@ -91,5 +157,37 @@
             <div class="usraction"></div>
             <div class="vimaction"></div>
         </div>
+        <div class="helpbox">
+            <div class="usraction"></div>
+            <div class="vimaction"></div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction"></div>
+            <div class="vimaction"></div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction"></div>
+            <div class="vimaction"></div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction"></div>
+            <div class="vimaction"></div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction"></div>
+            <div class="vimaction"></div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction"></div>
+            <div class="vimaction"></div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction"></div>
+            <div class="vimaction"></div>
+        </div>
+        <h2>Weitere Hilfen auf deutsch</h2>
+        <p>
+        <a href="http://www-user.tu-chemnitz.de/~hot/VIM/Tips_und_Tricks.html">http://www-user.tu-chemnitz.de/~hot/VIM/Tips_und_Tricks.html</a>
+        </p>
     </body>
 </html>
