--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
     </head>
     <body>
-        <h1>VIWIZ</h1>
+        <h1>VIWIZ VI, VIM Spickzettel</h1>
         <h2>Browse</h2>
         <div class="helpbox">
             <div class="usraction">CRTL-]</div>
@@ -138,24 +138,29 @@
                 nach unten.</div>
         </div>
         <div class="helpbox">
-            <div class="usraction"></div>
-            <div class="vimaction"></div>
+            <div class="usraction">&lt;shift&gt; H</div>
+            <div class="vimaction">Cursor springt an den oberen Bildschirmrand</div>
         </div>
         <div class="helpbox">
-            <div class="usraction"></div>
-            <div class="vimaction"></div>
+            <div class="usraction">&lt;shift&gt; M</div>
+            <div class="vimaction">Cursor sprint in die Mitte des Bildschirms</div>
         </div>
         <div class="helpbox">
-            <div class="usraction"></div>
-            <div class="vimaction"></div>
+            <div class="usraction">&lt;shift&gt; L</div>
+            <div class="vimaction">Cursor springt in die unterste Bildschirmzeile</div>
+        </div>
+        <h2>Folding</h2>
+        <div class="abstract">
+            <p>Bestimmte Bereiche zusammen falten.
+            Funktioniert im Kommado- als auch im Visual-Mode.</p>
         </div>
         <div class="helpbox">
-            <div class="usraction"></div>
-            <div class="vimaction"></div>
+            <div class="usraction">zfa}</div>
+            <div class="vimaction">Steht der Cursor in einem Block mit geschweiften Klammern wird der Block gefaltet.</div>
         </div>
         <div class="helpbox">
-            <div class="usraction"></div>
-            <div class="vimaction"></div>
+            <div class="usraction">zf</div>
+            <div class="vimaction">Faltet den markierten Bereich.</div>
         </div>
         <div class="helpbox">
             <div class="usraction"></div>
