--- a/index.html
+++ b/index.html
@@ -108,34 +108,51 @@
         </div>
         <div class="helpbox">
             <div class="usraction">f&lt;</div>
+            <div>(find forward)</div>
             <div class="vimaction">vorwärts bis Zeichen &lt;</div>
         </div>
         <div class="helpbox">
             <div class="usraction">t&lt;</div>
+            <div>(go <u>t</u>o)</div>
             <div class="vimaction">vorwärts bis vor Zeichen &lt;</div>
         </div>
         <div class="helpbox">
             <div class="usraction">F&lt;</div>
+            <div>(find backwards)</div>
             <div class="vimaction">rückwärts bis Zeichen &lt;</div>
         </div>
         <div class="helpbox">
             <div class="usraction">T&lt;</div>
+            <div>(back <u>t</u>o)</div>
             <div class="vimaction">rückwärts bis Zeichen &lt;</div>
         </div>
         <div class="helpbox">
             <div class="usraction">zt</div>
-            <div class="vimaction">Positionerung der aktuellen Zeile an
-            den oberen Bildschirmrand</div>
+            <div class="vimaction">Positionerung der aktuellen Zeile an den oberen Bildschirmrand</div>
         </div>
         <div class="helpbox">
             <div class="usraction">zz</div>
-            <div class="vimaction">Positionierung der aktuellen Zeile in
-            die Mitte</div>
+            <div class="vimaction">Positionierung der aktuellen Zeile in die Mitte</div>
         </div>
         <div class="helpbox">
             <div class="usraction">zb</div>
-            <div class="vimaction">Positionierung der aktellen Zeile
-                nach unten.</div>
+            <div class="vimaction">Positionierung der aktellen Zeile nach unten.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">&lt;ctrl&gt; f</div>
+            <div class="vimaction">Eine Bildschirmseite vorwärts.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">&lt;ctrl&gt; b</div>
+            <div class="vimaction">Eine Bildschirmseite rückwärts.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">&lt;ctrl&gt; d</div>
+            <div class="vimaction">Eine halbe Bildschirmseite vorwärts.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">&lt;ctrl&gt; u</div>
+            <div class="vimaction">Eine halbe Bildschirmseite rückwärts.</div>
         </div>
         <div class="helpbox">
             <div class="usraction">&lt;shift&gt; H</div>
@@ -148,6 +165,65 @@
         <div class="helpbox">
             <div class="usraction">&lt;shift&gt; L</div>
             <div class="vimaction">Cursor springt in die unterste Bildschirmzeile</div>
+        </div>
+        <h2>Einfügen</h2>
+        <div class="abstract">
+            <p>Die folgenden Eingaben wechseln in den Einfüge-Modus.</p>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">i</div>
+            <div class="vimaction">Einfügen links vom Cursor.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">I</div>
+            <div class="vimaction">Einfügen am Zeilenanfang.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">a</div>
+            <div class="vimaction">Einfügen rechts vom Cursor.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">A</div>
+            <div class="vimaction">Einfügen am Zeilenende.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">o</div>
+            <div class="vimaction">Neue Zeile hinter der aktuellen einfügen.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">O</div>
+            <div class="vimaction">Neue Zeile vor der aktuellen einfügen.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">R</div>
+            <div class="vimaction">Überschreiben ab Cursorposition.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">r</div>
+            <div class="vimaction">Ersetze das Zeichen unter dem Cursor und gehe zurück in den Kommando-Modus.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">s</div>
+            <div class="vimaction">Ersetze das Zeichen unter dem Cursor und bleibe im Einfüge-Modus.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">
+                S<br />
+                cc
+            </div>
+            <div class="vimaction">Ersetze die Zeile.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">cw</div>
+            <div class="vimaction">Ersetze Wort.</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">C</div>
+            <div class="vimaction">Ersetze bis zum Zeilenende</div>
+        </div>
+        <div class="helpbox">
+            <div class="usraction">~</div>
+            <div class="vimaction">Wechsel Groß- Kleinschreibung.</div>
         </div>
         <h2>Folding</h2>
         <div class="abstract">
