Neue Rubrik Verschiedenes

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="container-fluid">
             <img src="images/vimlogo.gif" />
             <h1>VIWIZ VI, VIM Spickzettel</h1>
+            <!--Browse-->
             <h2>Browse</h2>
             <div class="row-fluid">
                 <div class="span3">CRTL-]</div>
@@ -46,6 +47,7 @@
                 </div>
                 <div class="span3">Sprung zurück</div>
             </div>
+            <!--Hilfen-->
             <h2>Hilfen</h2>
             <div class="abstract">
                 <p>Um Hilfe zu den Kommandos bzw. insert und visual Mode zu
@@ -110,6 +112,7 @@
                 <div class="span3">Hilfe zu VIM-Option</div>
                 <div class="example">:help 'textwidth'</div>
             </div>
+            <!--Bewegen-->
             <h2>Bewegen</h2>
             <div class="abstract">
                 <p>Bewegungen werden im normal modus durchgeführt. In den
@@ -193,6 +196,7 @@
                 <div class="span3">&lt;shift&gt; L</div>
                 <div class="span3">Cursor springt in die unterste Bildschirmzeile</div>
             </div>
+            <!--Einfügen-->
             <h2>Einfügen</h2>
             <div class="abstract">
                 <p>Die folgenden Eingaben wechseln in den Einfüge-Modus.</p>
@@ -252,6 +256,7 @@
                 <div class="span3">~</div>
                 <div class="span3">Wechsel Groß- Kleinschreibung.</div>
             </div>
+            <!--Folding-->
             <h2>Folding</h2>
             <div class="abstract">
                 <p>Bestimmte Bereiche zusammen falten.
@@ -265,33 +270,11 @@
                 <div class="span3">zf</div>
                 <div class="span3">Faltet den markierten Bereich.</div>
             </div>
-            <div class="row-fluid">
-                <div class="span3"></div>
-                <div class="span3"></div>
-            </div>
-            <div class="row-fluid">
-                <div class="span3"></div>
-                <div class="span3"></div>
-            </div>
-            <div class="row-fluid">
-                <div class="span3"></div>
-                <div class="span3"></div>
-            </div>
-            <div class="row-fluid">
-                <div class="span3"></div>
-                <div class="span3"></div>
-            </div>
-            <div class="row-fluid">
-                <div class="span3"></div>
-                <div class="span3"></div>
-            </div>
-            <div class="row-fluid">
-                <div class="span3"></div>
-                <div class="span3"></div>
-            </div>
-            <div class="row-fluid">
-                <div class="span3"></div>
-                <div class="span3"></div>
+            <!-- Verschiedenes //-->
+            <h2>Verschiedenes</h2>
+            <div class="helpbox">
+                <div class="usraction">:cd %:h</div>
+                <div class="vimaction">Wechselt in das Verzeichnis der aktuell geöffneten Datei.</div>
             </div>
             <h2>Weitere Hilfen auf deutsch</h2>
             <p>
