--- a/index.html
+++ b/index.html
@@ -202,23 +202,23 @@
             </div>
             <div class="row-fluid">
                 <div class="span3">&lt;ctrl&gt; e</div>
-                <div class="span3">Ganze Bildschirmseite nach oben scrollen.</div>
+                <div class="span3">Bildschirmseite nach oben scrollen.</div>
             </div>
             <div class="row-fluid">
                 <div class="span3">&lt;ctrl&gt; f</div>
-                <div class="span3">Eine Bildschirmseite vorwärts.</div>
+                <div class="span3">Ganze Bildschirmseite vorwärts.</div>
             </div>
             <div class="row-fluid">
                 <div class="span3">&lt;ctrl&gt; b</div>
-                <div class="span3">Eine Bildschirmseite rückwärts.</div>
+                <div class="span3">Ganze Bildschirmseite rückwärts.</div>
             </div>
             <div class="row-fluid">
                 <div class="span3">&lt;ctrl&gt; d</div>
-                <div class="span3">Eine halbe Bildschirmseite vorwärts.</div>
+                <div class="span3">Halbe Bildschirmseite vorwärts.</div>
             </div>
             <div class="row-fluid">
                 <div class="span3">&lt;ctrl&gt; u</div>
-                <div class="span3">Eine halbe Bildschirmseite rückwärts.</div>
+                <div class="span3">Halbe Bildschirmseite rückwärts.</div>
             </div>
             <div class="row-fluid">
                 <div class="span3">&lt;shift&gt; H</div>
@@ -226,7 +226,7 @@
             </div>
             <div class="row-fluid">
                 <div class="span3">&lt;shift&gt; M</div>
-                <div class="span3">Cursor sprint in die Mitte des Bildschirms</div>
+                <div class="span3">Cursor springt in die Mitte des Bildschirms</div>
             </div>
             <div class="row-fluid">
                 <div class="span3">&lt;shift&gt; L</div>
@@ -312,6 +312,10 @@
             <div class="row-fluid">
                 <div class="span3">zf</div>
                 <div class="span3">Faltet den markierten Bereich.</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span3">zo</div>
+                <div class="span3">Entfaltet den gefalteten Bereich.</div>
             </div>
             <!-- Verschiedenes //-->
             <h2>Keyboard Macros</h2>
