--- a/index.html
+++ b/index.html
@@ -170,22 +170,22 @@
             </div>
             <div class="row-fluid">
                 <div class="span3">f&lt;</div>
-                <div>(find forward)</div>
+                <div class="span3">(find forward)</div>
                 <div class="span3">vorwärts bis Zeichen &lt;</div>
             </div>
             <div class="row-fluid">
                 <div class="span3">t&lt;</div>
-                <div>(go <u>t</u>o)</div>
+                <div class="span3">(go <u>t</u>o)</div>
                 <div class="span3">vorwärts bis vor Zeichen &lt;</div>
             </div>
             <div class="row-fluid">
                 <div class="span3">F&lt;</div>
-                <div>(find backwards)</div>
+                <div class="span3">(find backwards)</div>
                 <div class="span3">rückwärts bis Zeichen &lt;</div>
             </div>
             <div class="row-fluid">
                 <div class="span3">T&lt;</div>
-                <div>(back <u>t</u>o)</div>
+                <div class="span3">(back <u>t</u>o)</div>
                 <div class="span3">rückwärts bis Zeichen &lt;</div>
             </div>
             <div class="row-fluid">
