Add root save command.

--- a/index.html
+++ b/index.html
@@ -340,6 +340,10 @@
                 <div class="usraction">&lt;ctrl&gt; g</div>
                 <div class="vimaction">Zeigt die aktuelle Position in der Datei.</div>
             </div>
+            <div class="helpbox">
+                <div class="usraction">:w !sudo tee %</div>
+                <div class="vimaction">Speichert die aktuelle Datei als root.</div>
+            </div>
             <h2>Weitere Hilfen auf deutsch</h2>
             <p>
             <a href="http://www-user.tu-chemnitz.de/~hot/VIM/Tips_und_Tricks.html">http://www-user.tu-chemnitz.de/~hot/VIM/Tips_und_Tricks.html</a>
