--- a/index.html
+++ b/index.html
@@ -344,9 +344,23 @@
                 <div class="usraction">:w !sudo tee %</div>
                 <div class="vimaction">Speichert die aktuelle Datei als root.</div>
             </div>
+            <div class="helpbox">
+                <div class="usraction">:scriptnames</div>
+                <div class="vimaction">Zeigt alle Plugins und geladenen _vimrcs</div>
+            </div>
             <h2>Weitere Hilfen auf deutsch</h2>
             <p>
             <a href="http://www-user.tu-chemnitz.de/~hot/VIM/Tips_und_Tricks.html">http://www-user.tu-chemnitz.de/~hot/VIM/Tips_und_Tricks.html</a>
+            </p>
+            <h2>Weitere Hilfen International</h2>
+            <p>
+            <a href="http://www.zzapper.co.uk/vimtips.html">http://www.zzapper.co.uk/vimtips.html</a>
+            Ein sehr schöner Einleitungssatz:<br />
+            15 Years of Vi + 7 + Years of Vim and still learning.
+            </p>
+            <p>
+            <a href="http://vimtweets.com">http://vimtweets.com</a>
+            Die Seite funktioniert zur Zeit ( 15. Mai 2012 ) leider nicht.
             </p>
         </div>
     </body>
