--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <!-- Le styles -->
         <link href="css/bootstrap.css" rel="stylesheet">
         <link href="css/bootstrap-responsive.css" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet">
 
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
@@ -35,9 +36,26 @@
             <img src="images/vimlogo.gif" />
             <h1>VIWIZ VI, VIM Spickzettel</h1>
             <!--Browse-->
+            <h2>The nature</h2>
+            <div class="row-fluid">
+                Ups, eine englische Überschrift in einem deutschen Tutorial? 
+                Ja, die Natur von VIM ist einfach englisch. Viele Befehle lassen sich mit einer
+                englischen oder amerikanischen Tastaturbelegung einfacher Bedienen als mit einer
+                Deutschen.
+                <span class="key">ü</span>
+                <span class="key">ä</span>
+                <span class="key">ctrgdfgsl</span>
+                <span class="key">y</span>
+                und weiter im Text.
+                <div class="span3">CRTL-]</div>
+                <div class="span3">Springe zum Link oder suche nach dem Wort in der Hilfe</div>
+            </div>
             <h2>Browse</h2>
             <div class="row-fluid">
-                <div class="span3">CRTL-]</div>
+                <div class="span3">
+                    <span class="key">strg</span>
+                    <span class="key">]</span>
+                </div>
                 <div class="span3">Springe zum Link oder suche nach dem Wort in der Hilfe</div>
             </div>
             <div class="row-fluid">
