--- a/index.html
+++ b/index.html
@@ -53,15 +53,14 @@
             <h2>Browse</h2>
             <div class="row-fluid">
                 <div class="span3">
-                    <span class="key">strg</span>
-                    <span class="key">]</span>
+                    <span class="key">strg</span><span class="key">]</span>
                 </div>
                 <div class="span3">Springe zum Link oder suche nach dem Wort in der Hilfe</div>
             </div>
             <div class="row-fluid">
                 <div class="span3">
-                    CRTL-o<br />
-                    CRTL-t
+                    <span class="key">strg</span><span class="key">o</span><br />
+                    <span class="key">strg</span><span class="key">t</span>
                 </div>
                 <div class="span3">Sprung zurück</div>
             </div>
