--- a/index.html
+++ b/index.html
@@ -33,8 +33,49 @@
     </head>
     <body>
         <div class="container-fluid">
-            <img src="images/vimlogo.gif" />
-            <h1>VIWIZ VI, VIM Spickzettel</h1>
+            <img style="float: left" src="images/vimlogo.gif" />
+            <h1 style="float: left">VIWIZ VI, VIM Spickzettel</h1>
+            <br clear="both">
+            <h2>Keyboard Layout</h2>
+            <div>
+                <p>Der VI ist auf manchen Tastaturlayouts nicht so
+                einfach zu bedienen. Hier Bilder der verschiedenen
+                Tastenmodi</p>
+                <img src="images/en_key_neutral.png">
+                <img src="images/de_key_neutral.png">
+                <br />
+
+                <img src="images/en_key_shift.png">
+                <img src="images/de_key_shift.png">
+                <br />
+
+                <img src="images/en_key_ctrl.png">
+                <img src="images/de_key_ctrl.png">
+                <br />
+
+                <img src="images/en_key_alt.png">
+                <img src="images/de_key_alt.png">
+                <br />
+
+                <img src="images/en_key_ctrl_shift.png">
+                <img src="images/de_key_ctrl_shift.png">
+                <br />
+
+                <img src="images/en_key_alt_shift.png">
+                <img src="images/de_key_alt_shift.png">
+                <br />
+
+                <img src="images/en_key_ctrl_alt.png">
+                <img src="images/de_key_ctrl_alt.png">
+                <br />
+
+                <img src="images/en_key_ctrl_alt_shift.png">
+                <img src="images/de_key_ctrl_alt_shift.png">
+                <br />
+
+                <img src="images/en_key_fn.png">
+                <img src="images/de_key_fn.png">
+            </div>
             <!--Browse-->
             <h2>The nature</h2>
             <div class="row-fluid">
@@ -42,6 +83,8 @@
                 Ja, die Natur von VIM ist einfach englisch. Viele Befehle lassen sich mit einer
                 englischen oder amerikanischen Tastaturbelegung einfacher Bedienen als mit einer
                 Deutschen.
+                Nichtsdestotrotz ist der VI ein hervorragender und
+                anpassungsfähiger Editor 
                 <span class="key">ü</span>
                 <span class="key">ä</span>
                 <span class="key">ctrgdfgsl</span>
