Insert and styled kbd tag

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
                 Deutschen.
                 Nichtsdestotrotz ist der VI ein hervorragender und
                 anpassungsfähiger Editor 
+                <kbd>Test</kbd>
+                <kbd>Command</kbd>
                 <span class="key">ü</span>
                 <span class="key">ä</span>
                 <span class="key">ctrgdfgsl</span>
